graphite/exports/deploymentconfig.yaml
apiVersion: v1
items:
- apiVersion: apps.openshift.io/v1
  kind: DeploymentConfig
  metadata:
    annotations:
      openshift.io/generated-by: OpenShiftNewApp
    creationTimestamp: "2020-06-28T19:44:53Z"
    generation: 9
    labels:
      app: grafana-os-porting
      app.kubernetes.io/component: grafana-os-porting
      app.kubernetes.io/instance: grafana-os-porting
    name: grafana-os-porting
    namespace: cbl-grafanagaphite-test
    resourceVersion: "12969873"
    selfLink: /apis/apps.openshift.io/v1/namespaces/cbl-grafanagaphite-test/deploymentconfigs/grafana-os-porting
    uid: 224e77f6-9308-4fc0-874a-67204decf9ca
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    selector:
      deploymentconfig: grafana-os-porting
    strategy:
      activeDeadlineSeconds: 21600
      resources: {}
      rollingParams:
        intervalSeconds: 1
        maxSurge: 25%
        maxUnavailable: 25%
        timeoutSeconds: 600
        updatePeriodSeconds: 1
      type: Rolling
    template:
      metadata:
        annotations:
          openshift.io/generated-by: OpenShiftNewApp
        creationTimestamp: null
        labels:
          deploymentconfig: grafana-os-porting
      spec:
        containers:
        - image: registry.ocp.aws.puzzle.ch/openshift_cbl-grafanagaphite-test/grafana-os-porting@sha256:7d4f2bd18b45148b07c78937d2fc81e6a06ec41983042ccae99bf3ca280e9c31
          imagePullPolicy: Always
          name: grafana-os-porting
          ports:
          - containerPort: 2023
            protocol: TCP
          - containerPort: 80
            protocol: TCP
          - containerPort: 8125
            protocol: TCP
          - containerPort: 8125
            protocol: UDP
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8126
            protocol: TCP
          - containerPort: 2003
            protocol: TCP
          - containerPort: 2004
            protocol: TCP
          - containerPort: 2013
            protocol: TCP
          - containerPort: 2014
            protocol: TCP
          - containerPort: 2024
            protocol: TCP
          - containerPort: 2080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          volumeMounts:
          - mountPath: /opt/graphite/storage
            name: grafana-os-porting-volume-1
          - mountPath: /var/lib/redis
            name: grafana-os-porting-volume-2
          - mountPath: /var/log
            name: grafana-os-porting-volume-3
          - mountPath: /etc/nginx/nginx.conf
            name: config-volume
            subPath: nginx.conf
          - mountPath: /etc/nginx/sites-enabled/graphite-statsd.conf
            name: config-volume
            subPath: sites-enabled-graphite-statsd.conf
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
        volumes:
        - emptyDir: {}
          name: grafana-os-porting-volume-1
        - emptyDir: {}
          name: grafana-os-porting-volume-2
        - emptyDir: {}
          name: grafana-os-porting-volume-3
        - configMap:
            defaultMode: 420
            name: nginx-config
          name: config-volume
    test: false
    triggers:
    - type: ConfigChange
    - imageChangeParams:
        automatic: true
        containerNames:
        - grafana-os-porting
        from:
          kind: ImageStreamTag
          name: grafana-os-porting:latest
          namespace: cbl-grafanagaphite-test
        lastTriggeredImage: registry.ocp.aws.puzzle.ch/openshift_cbl-grafanagaphite-test/grafana-os-porting@sha256:7d4f2bd18b45148b07c78937d2fc81e6a06ec41983042ccae99bf3ca280e9c31
      type: ImageChange
  status:
    availableReplicas: 1
    conditions:
    - lastTransitionTime: "2020-06-28T20:57:23Z"
      lastUpdateTime: "2020-06-28T20:57:23Z"
      message: Deployment config has minimum availability.
      status: "True"
      type: Available
    - lastTransitionTime: "2020-06-28T23:07:47Z"
      lastUpdateTime: "2020-06-28T23:07:50Z"
      message: replication controller "grafana-os-porting-8" successfully rolled out
      reason: NewReplicationControllerAvailable
      status: "True"
      type: Progressing
    details:
      causes:
      - imageTrigger:
          from:
            kind: DockerImage
            name: registry.ocp.aws.puzzle.ch/openshift_cbl-grafanagaphite-test/grafana-os-porting@sha256:7d4f2bd18b45148b07c78937d2fc81e6a06ec41983042ccae99bf3ca280e9c31
        type: ImageChange
      message: image change
    latestVersion: 8
    observedGeneration: 9
    readyReplicas: 1
    replicas: 1
    unavailableReplicas: 0
    updatedReplicas: 1
kind: List
metadata:
  resourceVersion: ""
  selfLink: ""
